# hh_vacancies

./: main.py  pyproject.toml
htmlcov/: index.html
src/: api_client.py  base_classes.py  utils.py  vacancy.py  vacancy_analyzer.py  vacancy_io.py
tests/: conftest.py  test_api_client.py  test_utils.py  test_vacancy.py  test_vacancy_io.py
